<resources>
    <string name="app_name">TAKA</string>
    <string name="splash_content">모바일 티켓북, 타카</string>
    <string name="logo">타카 로고 아이콘</string>
    <string name="splash_logo">스플래시 로고</string>

    <!-- 티켓 예시 -->
    <string name="ticket_title_kr_sample">오펀스</string>
    <string name="ticket_title_en_sample">ORPHANS</string>
    <string name="ticket_poster_image">티켓 이미지</string>
    <string name="ticket_date_sample">2021.5.27</string>

    <!-- 로그인 회원가입 -->
    <string name="login">로그인</string>
    <string name="id_hint">아이디</string>
    <string name="pwd_hint">비밀번호</string>
    <string name="pwd_check_hint">비밀번호 확인</string>
    <string name="login_account_none">계정이 없으신가요?</string>
    <string name="signup">회원가입</string>
    <string name="signup_account_already">이미 계정이 있으신가요?</string>
    <string name="signup_duplicate_check">중복확인</string>
    <string name="signup_duplicate_checked">확인완료</string>
    <string name="add_ticket">티켓 추가</string>
    <string name="pick_image_album">앨범에서 이미지 선택</string>
    <string name="close">닫기</string>
    <string name="back">뒤로가기</string>
    <string name="home">홈</string>
    <string name="search">검색</string>
    <!-- 홈 화면 -->
    <string name="home_title">MY TICKETS</string>
    <string name="home_tickets_empty">버튼을 눌러\n티켓을 추가해보세요.</string>
    <string name="ticket_title_default">MUSICAL</string>
    <!-- 티켓 등록 화면 -->
    <string name="add">등록</string>
    <string name="ticket_title_kr">국문명</string>
    <string name="ticket_title_en">영문명</string>
    <string name="ticket_date">관람일자</string>
    <string name="ticket_description">회차정보</string>
    <string name="ticket_theater">공연장</string>
    <string name="ticket_seat">좌석</string>
    <string name="ticket_cast">캐스트</string>
    <string name="ticket_review">리뷰</string>
    <string name="ticket_title_kr_empty">작품의 국문명을 입력해주세요.</string>
    <string name="ticket_title_en_empty">작품의 영문명을 입력해주세요.</string>
    <string name="ticket_date_empty">관람일자를 입력해주세요.</string>
    <string name="ticket_description_empty">회차 정보를 입력해주세요.</string>
    <string name="ticket_theater_empty">공연장 정보를 입력해주세요.</string>
    <string name="ticket_seat_empty">좌석 정보를 입력해주세요.</string>
    <string name="ticket_cast_empty">캐스트 정보를 입력해주세요.</string>
    <string name="ticket_review_empty">리뷰를 입력해주세요.</string>
    <string name="ticket_image_empty">포스터를 추가해주세요.</string>
    <string name="ticket_image_edit">포스터 이미지 편집 버튼</string>
    <string name="home_imageview_mode">티켓 뷰 변경 아이콘</string>
    <string name="error_ticket_add_failed">티켓 추가 실패</string>
    <!-- 티켓 상세 -->
    <string name="menu_edit">수정하기</string>
    <string name="menu_delete">삭제하기</string>
    <string name="menu_share">공유하기</string>
    <string name="add_review">추가하기</string>
    <string name="label_close_button">닫기 버튼</string>
    <string name="delete_dialog_title">정말 삭제하시겠습니까?</string>
    <string name="delete_dialog_desc">삭제 후에는 복구가 불가능합니다.</string>
    <!-- 검색 화면 -->
    <string name="search_title">SEARCH</string>
    <string name="search_edit_label">작품명, 배우명 등으로 검색해보세요.</string>
    <string name="search_recent_keyword">최근 검색어</string>
    <string name="search_delete_all">모두 지우기</string>
    <string name="search_keyword_empty">검색어를 입력하세요.</string>
    <string name="search_result_empty">검색 결과가 없습니다.</string>
    <string name="search_recent_keyword_empty">최근 검색 내역이 없습니다.</string>
    <string name="search_button_label">검색 버튼</string>
    <!-- 마이페이지 -->
    <string name="mypage_icon">마이페이지 아이콘</string>
    <string name="mypage_hello">안녕하세요</string>
    <string name="mypage_contact">문의하기</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="mypage_title">MY PAGE</string>
    <string name="contact_email_hint">연락 받을 이메일 주소를 입력하세요.</string>
    <string name="contact_title_hint">제목을 입력하세요.</string>
    <string name="contact_content_hint">내용을 입력하세요.</string>
    <string name="contact_write">작성하기</string>
    <string name="zero">0</string>
</resources>