<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignupActivity">

    <ImageView
        android:id="@+id/signup_iv_logo"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_logo_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signup_et_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/login_margin_horizontal"
        android:layout_marginTop="90dp"
        android:autofillHints=""
        android:background="@color/white"
        android:fontFamily="@font/pretendard_regular"
        android:hint="@string/id_hint"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/text"
        android:textColorHint="@color/text_hint"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/signup_iv_logo"
        tools:ignore="SpUsage" />

    <EditText
        android:id="@+id/signup_et_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/login_margin_horizontal"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@color/white"
        android:fontFamily="@font/pretendard_regular"
        android:hint="@string/pwd_hint"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/text"
        android:textColorHint="@color/text_hint"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/signup_et_id"
        tools:ignore="SpUsage" />

    <EditText
        android:id="@+id/signup_et_pwd_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/login_margin_horizontal"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@color/white"
        android:fontFamily="@font/pretendard_regular"
        android:hint="@string/pwd_check_hint"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/text"
        android:textColorHint="@color/text_hint"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/signup_et_pwd"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/signup_tv_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/login_margin_horizontal"
        android:layout_marginTop="34dp"
        android:background="@color/orange_pink"
        android:fontFamily="@font/pretendard_bold"
        android:paddingVertical="13dp"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/signup_et_pwd_check"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/signup_tv_none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/signup_account_already"
        android:textSize="16dp"
        app:layout_constraintEnd_toStartOf="@id/signup_tv_login"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_tv_signup"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/signup_tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_medium"
        android:paddingHorizontal="8dp"
        android:text="@string/login"
        android:textColor="@color/orange_pink"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/signup_tv_none"
        app:layout_constraintTop_toTopOf="@id/signup_tv_none"
        tools:ignore="SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>