<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    tools:context=".presentation.login.LoginActivity">

    <ImageView
        android:id="@+id/login_iv_logo"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginTop="80dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_logo_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_et_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/login_margin_horizontal"
        android:layout_marginTop="90dp"
        android:autofillHints=""
        android:background="@color/white"
        android:fontFamily="@font/pretendard_regular"
        android:hint="@string/id_hint"
        android:includeFontPadding="false"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_text1"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/login_iv_logo"
        tools:ignore="SpUsage" />

    <EditText
        android:id="@+id/login_et_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/login_margin_horizontal"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@color/white"
        android:fontFamily="@font/pretendard_regular"
        android:hint="@string/pwd_hint"
        android:includeFontPadding="false"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_text1"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/login_et_id"
        tools:ignore="SpUsage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/SquareButton"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="35dp"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/login_et_pwd" />

    <TextView
        android:id="@+id/login_tv_none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/pretendard_medium"
        android:includeFontPadding="false"
        android:text="@string/login_account_none"
        android:textColor="@color/gray_text2"
        android:textSize="16dp"
        app:layout_constraintEnd_toStartOf="@id/login_tv_signup"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/login_tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_medium"
        android:includeFontPadding="false"
        android:paddingHorizontal="8dp"
        android:text="@string/signup"
        android:textColor="@color/orange_vivid"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/login_tv_none"
        app:layout_constraintTop_toTopOf="@id/login_tv_none"
        tools:ignore="SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>
