<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.mypage.MypageActivity">

    <TextView
        android:id="@+id/mypage_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/taka_regular"
        android:text="@string/mypage_title"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <ImageView
        android:id="@+id/mypage_iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:contentDescription="@string/mypage_icon"
        android:padding="10dp"
        android:src="@drawable/ic_close_activity"
        app:layout_constraintBottom_toBottomOf="@id/mypage_tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/mypage_tv_title" />

    <TextView
        android:id="@+id/mypage_tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/pretendard_bold"
        android:includeFontPadding="false"
        android:text="@string/mypage_hello"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintStart_toStartOf="@id/mypage_tv_title"
        app:layout_constraintTop_toBottomOf="@id/mypage_tv_title"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/mypage_tv_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/pretendard_regular"
        android:includeFontPadding="false"
        android:textColor="@color/orange_red"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mypage_tv_hello"
        tools:ignore="SpUsage"
        tools:text="taka123님!" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        android:background="@color/gray_light"
        android:orientation="vertical"
        android:paddingHorizontal="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mypage_tv_nickname">

        <TextView
            android:id="@+id/mypage_tv_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/pretendard_bold"
            android:includeFontPadding="false"
            android:paddingVertical="12dp"
            android:text="@string/mypage_contact"
            android:textColor="@color/text_hint"
            android:textSize="17dp"
            tools:ignore="SpUsage" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="10dp"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/mypage_tv_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_bold"
            android:includeFontPadding="false"
            android:paddingVertical="12dp"
            android:text="@string/mypage_logout"
            android:textColor="@color/text_hint"
            android:textSize="17dp"
            tools:ignore="SpUsage" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>