<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_add_dialog">

    <TextView
        android:id="@+id/contact_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:text="@string/mypage_contact"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <ImageButton
        android:id="@+id/contact_ib_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="10dp"
        android:background="@null"
        android:padding="10dp"
        android:src="@drawable/ic_close_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/contact_et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="29dp"
        android:background="@drawable/bg_contact_edit"
        android:hint="@string/contact_email_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="14dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_text2"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_tv_title"
        tools:ignore="SpUsage" />

    <EditText
        android:id="@+id/contact_et_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/bg_contact_edit"
        android:hint="@string/contact_title_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="14dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_text2"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_et_email"
        tools:ignore="SpUsage" />

    <EditText
        android:id="@+id/contact_et_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/bg_contact_edit"
        android:gravity="start"
        android:hint="@string/contact_content_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="14dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_text2"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@id/btn_write"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_et_title"
        tools:ignore="SpUsage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_write"
        style="@style/SquareButton"
        android:layout_width="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="28dp"
        android:text="@string/contact_write"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>