<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_add_dialog">

    <TextView
        android:id="@+id/dialog_add_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:fontFamily="@font/pretendard_regular"
        android:text="@string/add_ticket"
        android:textColor="@color/dialog_text"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <ImageView
        android:id="@+id/dialog_add_iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:contentDescription="@string/close"
        android:padding="10dp"
        android:src="@drawable/ic_close_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_add_tv_pick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="29dp"
        android:background="@color/dialog_pick_background"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="22dp"
        android:paddingVertical="17dp"
        android:text="@string/pick_image_album"
        android:textColor="@color/dialog_text"
        android:textSize="15dp"
        app:drawableStartCompat="@drawable/ic_album"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_add_tv_title"
        tools:ignore="SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>
